Edited the CSS to word-wrap long words. Addresses issue #5.

--- a/less/views/RecognitionView.less
+++ b/less/views/RecognitionView.less
@@ -5,6 +5,8 @@
     @recognition_radius: 10px;
     @animation_distance: 5px;
 
+    word-wrap: break-word;
+
     .inner {
         background-color: @7g_border_color;
         padding: 6px;
